--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+opennms (32.0.4-1) stable; urgency=low
+
+  * Release 32.0.4 contains documentation updates as well as a number of
+    bug fixes and enhancements including Sentinel fixes, improvements to
+    running in containers, metadata support improvements, and some other
+    small changes.
+
+    For details on what has changed, see:
+    https://docs.opennms.com/horizon/32.0.4/index.html
+
 opennms (32.0.3-1) stable; urgency=medium
 
   * Minor release containing several bug fixes and documentation improvements.
